name:                diagrams
version:             2.0.0.0
synopsis:            diagrams
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams
    Diagrams.Prelude
    Diagrams.Attributes
    Diagrams.Backend.Compile
    Diagrams.Types.Measure
    Diagrams.Types.Annotations
    Diagrams.Types.Names
    Diagrams.Types.Style
    Diagrams.Types
    Diagrams.Util
    -- Diagrams.Animation.Active
    Diagrams.Backend.CmdLine
    Diagrams.Backend
    Diagrams.TwoD.Attributes
    Diagrams.Combinators
    Diagrams.TwoD.Combinators
    Diagrams.TwoD.Image
    Diagrams.TwoD.Path
    Diagrams.TwoD.Path.Unboxed
    Diagrams.TwoD.Text
  -- other-modules:       
  other-extensions:
    CPP, FlexibleContexts, MultiParamTypeClasses, TypeFamilies,
    DeriveDataTypeable, DeriveFunctor, ExistentialQuantification,
    FlexibleInstances, GeneralizedNewtypeDeriving, LambdaCase,
    ScopedTypeVariables, ViewPatterns, TypeOperators, GADTs,
    TypeSynonymInstances, DataKinds, Rank2Types, EmptyDataDecls,
    TupleSections, UndecidableInstances, ConstrainedClassMethods,
    NoMonomorphismRestriction, RankNTypes, TemplateHaskell,
    StandaloneDeriving
  build-depends:
    base >=4.9 && <4.10,
    exceptions,
    transformers,
    constraints,
    vector,
    -- active >=0.2 && <0.3,
    linear >=1.20 && <1.21,
    geometry,
    reflection,
    lens >=4.14 && <4.15,
    colour >=2.3 && <2.4,
    data-default-class >=0.1 && <0.2,
    distributive >=0.5 && <0.6,
    hashable,
    monoid-extras >=0.4 && <0.5,
    containers >=0.5 && <0.6,
    dual-tree >=0.3,
    mtl >=2.2 && <2.3,
    adjunctions >=4.3 && <4.4,
    unordered-containers >=0.2 && <0.3,
    optparse-applicative >=0.12 && <0.13,
    directory >=1.2 && <1.3,
    filepath >=1.4 && <1.5,
    fsnotify >=0.2 && <0.3,
    process >=1.4 && <1.5,
    JuicyPixels >=3.2 && <3.3,
    bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:      -Wall

