name:                diagrams
version:             2.0.0.0
synopsis:            diagrams
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Diagrams
    Diagrams.Prelude
    Diagrams.Attributes
    Diagrams.Animation.Active
    Diagrams.Animation
    Diagrams.Backend.Compile
    Diagrams.Types.Measure
    Diagrams.Types.Annotations
    Diagrams.Types.Names
    Diagrams.Types.Tree
    Diagrams.Types.Style
    Diagrams.Types
    Diagrams.Util
    Diagrams.Backend.CmdLine
    Diagrams.Backend
    Diagrams.TwoD.Attributes
    Diagrams.Combinators
    Diagrams.TwoD.Combinators
    Diagrams.TwoD.Image
    Diagrams.TwoD.Model
    Diagrams.TwoD.Path
    Diagrams.TwoD.Text
    Diagrams.ThreeD.Attributes
    Diagrams.ThreeD.Light
  -- other-modules:       
  other-extensions:
    CPP, FlexibleContexts, MultiParamTypeClasses, TypeFamilies,
    DeriveDataTypeable, DeriveFunctor, ExistentialQuantification,
    FlexibleInstances, GeneralizedNewtypeDeriving, LambdaCase,
    ScopedTypeVariables, ViewPatterns, TypeOperators, GADTs,
    TypeSynonymInstances, DataKinds, Rank2Types, EmptyDataDecls,
    TupleSections, UndecidableInstances, ConstrainedClassMethods,
    NoMonomorphismRestriction, RankNTypes, TemplateHaskell,
    StandaloneDeriving
  build-depends:
    base >=4.9 && <4.11,
    exceptions,
    transformers,
    constraints,
    active,
    intervals,
    vector,
    linear,
    geometry,
    reflection,
    profunctors,
    lens,
    colour >=2.3 && <2.4,
    data-default-class,
    distributive >=0.5 && <0.6,
    hashable,
    monoid-extras >=0.4 && <0.5,
    containers >=0.5 && <0.6,
    mtl >=2.2 && <2.3,
    adjunctions >=4.3 && <4.4,
    unordered-containers >=0.2 && <0.3,
    optparse-applicative >=0.12 && <0.15,
    directory,
    filepath >=1.4 && <1.5,
    fsnotify >=0.2 && <0.3,
    process >=1.4 && <1.7,
    JuicyPixels >=3.2 && <3.3,
    bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:      -Wall

